Adjust footer width to avoid wrapping with more links

--- a/www/assets/css/partials/_footer.scss
+++ b/www/assets/css/partials/_footer.scss
@@ -50,7 +50,7 @@ footer{
 
 		@media screen and (min-width: 768px){
 			float: left;
-			width: 40%;	
+			width: 60%;	
 		}
 	}
 
